# Quantum-Operating-System

./: .coderabbit.yaml  .gitignore
redox/: .config.example  ARCHITECTURE.md  CHANGELOG.md  MACROHARD.md  Ports.md  ROADMAP.md  Start.md
redox/.github/workflows/: ci.yml
redox/config/: macrohard-desktop.toml  macrohard-minimal.toml  macrohard-server.toml
redox/config/x86_64/: macrohard-desktop.toml  macrohard-minimal.toml  macrohard-server.toml
redox/docs/: AI_TOOLS.md  DRIVERS.md  GETTING_STARTED.md  HYPERVISOR.md  SECURITY.md
redox/quantum_os/: .gitignore  Cargo.toml  README.md  glossary.toml
redox/quantum_os/crates/eustress_semantics/: Cargo.toml
redox/quantum_os/crates/eustress_semantics/src/: lib.rs
redox/quantum_os/crates/kernel_services/: Cargo.toml
redox/quantum_os/crates/kernel_services/src/: capability.rs  channel.rs  handle.rs  lib.rs  message.rs  task.rs
redox/quantum_os/crates/quantum_device_abstraction/: Cargo.toml
redox/quantum_os/crates/quantum_device_abstraction/src/: lib.rs
redox/quantum_os/crates/quantum_runtime/: Cargo.toml
redox/quantum_os/crates/quantum_runtime/src/: async_runtime.rs  circuit_program.rs  error.rs  execution.rs  gate_operations.rs  gpu_backend.rs  lib.rs  logosq_compat.rs  measurement.rs  optimization.rs  state_backend.rs  streaming.rs  webtransport.rs
redox/quantum_os/crates/ux_visualization/: Cargo.toml
redox/quantum_os/crates/ux_visualization/src/: lib.rs
redox/quantum_os/docs/: meaning_packet_theoretical_foundation.md  phase_3_annotated_bibliography.md
redox/quantum_os/examples/: bell_state_demo.rs
redox/recipes/archives/zstd/: 01_redox.patch
redox/recipes/dev/rust/: recipe.toml
redox/recipes/macrohard/ai-tools/: recipe.toml
redox/recipes/macrohard/core/: recipe.toml
redox/recipes/macrohard/hypervisor/: recipe.toml
redox/recipes/macrohard/security/: recipe.toml
redox/recipes/macrohard/windows-bridge/: recipe.toml
redox/recipes/net/http/simple-http-server/: recipe.toml
redox/recipes/wip/dev/lang/nodejs-24/: 01_redox.patch
redox/recipes/wip/games/other/love/: redox.patch
redox/recipes/wip/gnome/gnome-web/: recipe.toml
redox/recipes/wip/net/http/miniserve/: recipe.toml
redox/recipes/wip/shells/zsh/: 01_redox.patch  recipe.toml
redox/rust/: .gitmodules
redox/scripts/: macrohard-build.sh  macrohard-dev.ps1
