# =============================================================================
# MACROHARD Quantum OS - Kernel Services Crate
# =============================================================================
# Table of Contents:
#   1. Package Configuration
#   2. Dependencies - IPC, capabilities, message passing
# =============================================================================

[package]
name = "kernel_services"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Microkernel services: IPC, tasks, capabilities for Quantum OS"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true

[features]
default = []
async_runtime = []
