# =============================================================================
# MACROHARD Quantum OS - Quantum Runtime Crate
# =============================================================================
# Table of Contents:
#   1. Package Configuration
#   2. Dependencies - LogosQ core, numerics, async
# =============================================================================

[package]
name = "quantum_runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Quantum runtime: circuit IR, state backends, execution, measurement"

[dependencies]
# Workspace dependencies
logosq.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
parking_lot.workspace = true
num-complex.workspace = true
ndarray.workspace = true
crossbeam-channel.workspace = true

# Local crates
kernel_services = { path = "../kernel_services" }

[features]
default = ["dense_backend"]
dense_backend = []
mps_backend = []
all_backends = ["dense_backend", "mps_backend"]
logosq_compat = []
async_runtime = ["tokio/full"]
simd_accel = []
gpu_backend = ["wgpu"]
full = ["all_backends", "logosq_compat", "async_runtime", "webtransport"]
webtransport = ["quinn", "rustls", "rcgen"]

[dependencies.wgpu]
version = "0.19"
optional = true

[dependencies.futures]
version = "0.3"

[dependencies.tokio-stream]
version = "0.1"

[dependencies.async-trait]
version = "0.1"

[dependencies.lazy_static]
version = "1.4"

[dependencies.num_cpus]
version = "1.16"

[dependencies.rayon]
version = "1.8"
optional = true

[dependencies.bytemuck]
version = "1.14"
features = ["derive"]

[dependencies.quinn]
version = "0.11"
optional = true

[dependencies.rustls]
version = "0.23"
optional = true

[dependencies.rcgen]
version = "0.12"
optional = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Networking_WinSock"] }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "gate_benchmarks"
harness = false
